# devon4py

./: .coveragerc  .gitignore  Dockerfile  PROD.env  README.md  TEST.env  cloudbuild.yaml  database_config.py  docker-compose.yaml  docker-compose.yml  host.json  logging.yaml  main.py  pyproject.toml  realm-export-orig.json  realm-export.json  requirements.txt  settings.py
app/: PROD.env  TEST.env  __init__.py  api.py  main.py
app/business/: __init__.py  router.py
app/business/controllers/: __init__.py  user.py
app/business/services/: user.py
app/business/todo_management/: router.py
app/common/: __init__.py  utils.py
app/common/base/: base_entity.py  base_firebase_repository.py  base_repository.py
app/common/controllers/: __init__.py  auth.py  identity.py
app/common/core/: __init__.py  configuration.py  database.py  exception_handlers.py  identity_provider.py
app/common/exceptions/: http.py  runtime.py
app/common/infra/: __init__.py  firebase.py  keycloak.py  sql_adaptors.py
app/conf/: Configuration.py
app/controllers/: __common__.py  __init__.py  auth.py  identity.py  user.py
app/core/: Configuration.py  database.py  exception_handlers.py
app/models/: __init__.py  group.py  links.py  role.py  user.py
app/repositories/: base.py  user.py
app/services/: user.py
azure/: __init__.py  function.json
docker/: Dockerfile  Dockerfile_alpine  Dockerfile_v2  docker-entrypoint.sh  poetry-modules.txt
entities/: order.py
flask_test/: hello_world.yml  inserts.py  login.yml  main.py  populating_table.ipynb  username.yml
repository/: repository.py
repository_pattern_test/: __init__.py
schemas/: order.py
static/css/: site.css
templates/shared/: _layout.html
templates/todo/: index.html
test_order/: __init__.py
(+40 files in other folders)
