[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["LuisPi <luis.pinon-ferrer@capgemini.com>", "agriagarp <adrian.garcia-pitarch@capgemini.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.79.0"}
sqlmodel = "^0.0.6"
requests = "^2.28.0"
aiosqlite = "^0.17.0"
fastapi_keycloak = "^1.0.6"
firebase-admin = "^5.2.0"
sse-starlette = "^1.1.3"
protobuf = "3.20.1"
mypy = "^0.971"
coverage = "^6.4.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
